# Opinion-Markets

./: .dockerignore  .env  .env.example  .gitignore  Anchor.toml  CODE_REVIEW.md  Cargo.toml  DEVNET_TESTING_SETUP.md  Dockerfile  FRONTEND_BUILD_SUMMARY.md  HANDOFF_SUMMARY.md  ORACLE_OPERATOR_RUNBOOK.md  PHASE3_COMPLETION_SUMMARY.md  PHASE_1_IMPLEMENTATION.md  PHASE_1_SUMMARY.md  PHASE_2_IMPLEMENTATION.md  PHASE_3_IMPLEMENTATION.md  PLATFORM_SUMMARY.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  PRODUCTION_GUIDE.md  README.md  REPOSITORY_STRUCTURE.md  SECURITY_AUDIT_SCOPE.md  SPEC_IMPLEMENTATION_CROSS_REFERENCE.md  TESTING_GUIDE.md  TESTNET_DEPLOYMENT.md  deploy-testnet.sh  docker-compose.yml  package-lock.json  package.json
.github/workflows/: deploy.yml  test.yml
api/: .env  .swcrc  Dockerfile  package-lock.json  package.json  prisma.config.ts  tsconfig.json
api/src/: database.ts  server.ts
api/src/entities/: Market.ts  Opinion.ts  OpinionReaction.ts  Position.ts  UserPortfolio.ts
frontend/: app.js  index.html  next.config.js  package-lock.json  package.json  styles.css  tsconfig.json
frontend/.next/: build-manifest.json  react-loadable-manifest.json  trace
frontend/styles/: globals.css
migrations/: 002_triple_check_scoring.sql  003_live_sentiment_dynamic_caps.sql  004_dual_score_payout.sql
monitoring/alertmanager/: alertmanager.yml
monitoring/prometheus/: opinion-markets-rules.yml  prometheus.yml
oracle/: package.json
oracle/src/: index.ts
prisma/: schema.prisma
programs/opinion-market/: Cargo.toml
scripts/: deploy-devnet.sh  deploy-mainnet.sh  deploy-testnet.sh  load-test.ts  setup-devnet.ts  validate-testnet.ts
tests/: opinion-market.ts
(+135 files in other folders)
