[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[patch.crates-io]
# Force blake3 to a version that accepts the older constant_time_eq
blake3 = { git = "https://github.com/BLAKE3-team/BLAKE3", tag = "1.8.2" }

# Redirect constant_time_eq to your local 2021-compatible vendor folder
constant_time_eq = { path = "vendor/constant_time_eq" }
