[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[patch.crates-io]
# Force blake3 to v1.8.2 (the last version using Edition 2021)
blake3 = { git = "https://github.com/BLAKE3-team/BLAKE3", tag = "1.8.2" }

# Force constant_time_eq to v0.3.1 (compatible with older compilers)
constant_time_eq = { git = "https://github.com/cespare/constant_time_eq", tag = "v0.3.1" }
